--- a/css/dialog.css
+++ b/css/dialog.css
@@ -1,12 +1,13 @@
 .dialog {
 	display: none;
-	position: relative;
+	position: absolute;
 	left: 0;
 	top: 100%;
 	margin: auto;
 	padding: 8pt;
 	width: auto;
 	height: auto;
+	background-color: #FFF;
 	text-align: center;
 	font: 10pt Verdana;
 	border: solid 1px #CCC;
@@ -32,6 +33,10 @@
 	border: 0;
 	border-radius: 2pt;
 	cursor: hand;
+}
+
+.dialog button:disabled {
+	background-color: #87CEFA;
 }
 
 .dialog tr {
