重新组织了一个js文件, 好看多了.
Signed-off-by: Huikang Yi <huikangyi@gmail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -225,7 +225,7 @@
 					<td><input id="dialogimgurl" placeholder="File path or URL" type = "text" /></td>
 					<td>
 						<div class="fileUpload btn btn-primary">
-						    <button>Browse...</button>
+						    <button id = "dibrowse">Browse...</button>
 						    <input id="uploadBtn" type="file" class="upload" />
 						</div>
 					</td>
