--- a/templates/index.html
+++ b/templates/index.html
@@ -96,12 +96,17 @@
 						<ul>
 							<li>
 								<span><p class = "fa fa-th"></p>Insert Table...<p class = "hotkey fa fa-caret-right"></p></span>
-								<table>
-									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
-									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
-									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
-									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
-									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></tr>
+								<table id = "ttb">
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
+									<tr><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"></td><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"><td class = "ttd"></tr>
 									<tr><td colspan = "10"><p id = "tablewidth">4</p> &times; <p id = "tableheight">4</p></td></tr>
 								</table>
 							</li>
