--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>My Word</title>
 		<meta charset = "utf-8">
+		<link href="../../../../static/word.ico" rel="shortcut icon">
 		<script type = "text/javascript" src = "../../../../../static/js/viceditor.js"></script>
 	</head>
 	<body>
@@ -142,7 +143,6 @@
 					<span class = "fa fa-italic" id = "qitalic"></span>
 					<span class = "fa fa-underline" id = "qunderline"></span>
 					<span class = "fa fa-strikethrough" id = "qstrikethrough"></span>
-					<span class = "fa fa-font" id = "qforecolor"></span>
 				</div>
 				<div class = "box">
 					<span class = "fa fa-align-left" id = "qjustifyleft"></span>
@@ -157,10 +157,10 @@
 					<span class = "fa fa-outdent" id = "qoutdent"></span>
 				</div>
 				<div class = "box">
+					<span class = "fa fa-puzzle-piece" id = "qmarkdown"></span>
+					<span class = "fa fa-photo" id = "qimage"></span>
 					<span class = "fa fa-chain" id = "qlink"></span>
 					<span class = "fa fa-chain-broken" id = "qunlink"></span>
-					<span class = "fa fa-photo" id = "qimage"></span>
-					<span class = "fa fa-puzzle-piece" id = "qmarkdown"></span>
 				</div>
 				<div class = "box">
 					<span class = "fa fa-quote-left" id = "qblockquote"></span>
