--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
 						<span>File</span>
 						<ul>
 							<li><span>Import Markdown File...</span></li>
+							<li><span id = "savepdf">Save as PDF</span></li>
 							<li><span>Export</span></li>
 						</ul>
 					</li>
@@ -134,7 +135,7 @@
 			<div class = "quick_menu">
 				<div class = "box">
 					<span class = "fa fa-save"></span>
-					<span class = "fa fa-print"></span>
+					<span class = "fa fa-print" id = "qprint"></span>
 					<span class = "fa fa-undo" id = "qundo"></span>
 					<span class = "fa fa-repeat" id = "qredo"></span>
 				</div>
